entity_macros/tests/ui/derive/ent/missing-type-for-edge-attr-with-no-inner.stderr
error: Unexpected meta-item format `word` at my_edge/edge
 --> $DIR/missing-type-for-edge-attr-with-no-inner.rs:4:1
  |
4 | struct TestEnt {
  | ^^^^^^
